@@ -28,16 +28,23 @@ if ($GLOBALS["submit"]) {
 	$newroot = trove_getrootcat($GLOBALS['form_parent']);
 
 	if ($GLOBALS[form_shortname]) {
-		$res = db_query("
-			UPDATE trove_cat
-			SET	shortname='".htmlspecialchars($form_shortname)."',
-				fullname='".htmlspecialchars($form_fullname)."',
-				description='".htmlspecialchars($form_description)."',
-				parent='$form_parent',
-				version='".date("Ymd",time())."01',
-				root_parent='$newroot'
-			WHERE trove_cat_id='$form_trove_cat_id'
-		");
+		if ($form_trove_cat_id == $form_parent) {
+			exit_error($Language->getText(
+								'admin_trove_cat_edit','error_tove_equal_parent'),
+								db_error()
+			);
+		} else {
+			$res = db_query("
+				UPDATE trove_cat
+				SET	shortname='".htmlspecialchars($form_shortname)."',
+					fullname='".htmlspecialchars($form_fullname)."',
+					description='".htmlspecialchars($form_description)."',
+					parent='$form_parent',
+					version='".date("Ymd",time())."01',
+					root_parent='$newroot'
+				WHERE trove_cat_id='$form_trove_cat_id'
+			");
+		}
 
 		if (!$res || db_affected_rows($res)<1) {
 			exit_error(
@@ -72,7 +79,7 @@ if ($GLOBALS["delete"]) {
 		exit_error( $Language->getText('admin_trove_cat_edit','error_in_trove_operation'), db_error());
 	}
 	if (db_numrows($res)>0) {
-		exit_error( $Language-getText('admin_trove_cat_edit','cant_delete_has_subcategories'));
+		exit_error( $Language->getText('admin_trove_cat_edit','cant_delete_has_subcategories'), db_error());
 	} else {
 		$res=db_query(" DELETE FROM trove_cat WHERE trove_cat_id='$form_trove_cat_id'");
 		if (!$res || db_affected_rows($res)<1) {
@@ -110,6 +117,12 @@ site_admin_header(array('title'=>$Language->getText('admin_trove_cat_edit','titl
 // generate list of possible parents
 $res_parent = db_query("SELECT shortname,fullname,trove_cat_id FROM trove_cat");
 
+// Place the root node at the start of the list
+print('<option value="0"');
+if ($row_cat["parent"] == 0) {
+	print(' selected="selected"');
+}
+print('>root</option>');
 while ($row_parent = db_fetch_array($res_parent)) {
 	print ('<option value="'.$row_parent["trove_cat_id"].'"');
 	if ($row_cat["parent"] == $row_parent["trove_cat_id"]) print ' selected="selected"';
